fix: allow ContactList table to overflow so popover can display correctly

--- a/src/components/contacts/ContactList.scss
+++ b/src/components/contacts/ContactList.scss
@@ -1,6 +1,10 @@
 @import "@unioncredit/ui/src/variables";
 
 .ContactList {
+  .table {
+    overflow: visible;
+  }
+
   .table-head {
     color: $grey700;
   }
